# lmms-but-better

data/themes/classic/: style.css
data/themes/default/: style.css
include/: AutomationEditor.h  CPULoadWidget.h  ComboBox.h  Fader.h  LcdWidget.h  LedCheckBox.h  MidiClipView.h  Oscilloscope.h  PianoRoll.h  SubWindow.h
plugins/Vestige/: Vestige.cpp
plugins/Vst3Base/: CMakeLists.txt  README.md  Vst3Basics.cpp  Vst3Basics.h  Vst3HostApp.cpp  Vst3HostApp.h  Vst3Manager.cpp  Vst3Manager.h  Vst3Module.cpp  Vst3Module.h  Vst3Plugin.cpp  Vst3Plugin.h  Vst3SdkIids.cpp  Vst3SubPluginFeatures.cpp  Vst3SubPluginFeatures.h  Vst3ViewBase.cpp  Vst3ViewBase.h  Vst3X11Helpers.cpp  Vst3X11Helpers.h  vst3_base.cpp
plugins/Vst3Effect/: CMakeLists.txt  Vst3Effect.cpp  Vst3Effect.h
plugins/Vst3Instrument/: CMakeLists.txt  Vst3Instrument.cpp  Vst3Instrument.h
plugins/VstBase/: VstPlugin.cpp
plugins/VstEffect/: VstEffect.cpp  VstSubPluginFeatures.cpp
src/gui/: SubWindow.cpp
src/gui/clips/: MidiClipView.cpp
src/gui/editors/: AutomationEditor.cpp  PianoRoll.cpp
src/gui/widgets/: CPULoadWidget.cpp  ComboBox.cpp  Fader.cpp  GroupBox.cpp  LcdFloatSpinBox.cpp  LcdWidget.cpp  LedCheckBox.cpp  Oscilloscope.cpp
